[package]
name = "json-peek"
version = "0.1.0"
authors = ["oOBoomberOo <boombercmd123@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "test"
path = "src/main.rs"

[lib]
name = "json_peek"
path = "src/lib.rs"

[dependencies]
thiserror = "1.0.14"